--- a/index.html
+++ b/index.html
@@ -33,6 +33,38 @@
     </div>
   </div>
 </nav>
+
+<!--Portafolio-->
+  <div class="row">
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/Captura de pantalla 2023-08-25 200647.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Proyecto Css</h5>
+          <a href="#" class="btn btn-primary">Ver proyecto</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/Captura de pantalla 2023-08-25 234014.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Proyecto Flexbox</h5>
+          <a href="#" class="btn btn-primary">Ver proyecto</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/Captura de pantalla 2023-08-25 234442.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Proyecto Bootstrap</h5>
+          <a href="#" class="btn btn-primary">Ver proyecto</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
