--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./assets/img/Captura de pantalla 2023-08-25 200647.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Proyecto Css</h5>
-          <a href="#" class="btn btn-primary">Ver proyecto</a>
+          <a href="https://svillaa.github.io/Proyecto-CSS/" class="btn btn-primary">Ver proyecto</a>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
         <img src="./assets/img/Captura de pantalla 2023-08-25 234014.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Proyecto Flexbox</h5>
-          <a href="#" class="btn btn-primary">Ver proyecto</a>
+          <a href="https://svillaa.github.io/Proyecto-Flexbox/" class="btn btn-primary">Ver proyecto</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
         <img src="./assets/img/Captura de pantalla 2023-08-25 234442.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Proyecto Bootstrap</h5>
-          <a href="#" class="btn btn-primary">Ver proyecto</a>
+          <a href="https://svillaa.github.io/Proyecto-Bootstrap/" class="btn btn-primary">Ver proyecto</a>
         </div>
       </div>
     </div>
