--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <!--Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+     <!--CSS-->
+     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!--Navbar-->
@@ -35,6 +37,8 @@
 </nav>
 
 <!--Portafolio-->
+<div class="container text-center p-5">
+  <h1>Portafolio Sebastián Villa</h1>
   <div class="row">
     <div class="col-sm">
       <div class="card" style="width: 18rem;">
@@ -65,6 +69,11 @@
     </div>
   </div>
 </div>
+</div>
+  
+
+<!--Educación + experiencia-->
+
 <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
