--- a/index.html
+++ b/index.html
@@ -73,6 +73,38 @@
   
 
 <!--Educación + experiencia-->
+<div class="container-fluid text-start">
+  <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+  <div class="row">
+    <div class="col-md-8">
+      <h1>Experiencia Laboral</h1>
+      <div class="trabajo">
+        <h4>Fotógrafo</h4>
+        <p>2017-2022</p>
+      </div>
+
+      <div class="trabajo">
+        <h4>Fotógrafo de moda independiente</h4>
+        <p>2023-Actualidad</p>
+      </div>
+    </div>
+
+    <div class="col-6 col-md-4">
+      <h1>Educación</h1>
+      <div class="estudio">
+        <h4>Técnico en mercados financieros, Instituto de Estudios Bursátiles (IEB), Madrid</h4>
+        <p>2021</p>
+
+        <h4>Curso avanzado de vinos, Escuela de sommeliers de Chile</h4>
+        <p>2022</p>
+
+        <h4>Fotografía de moda, Escuela de fotografía Fotodesign, Chile</h4>
+        <p>2022</p>
+
+
+      </div>
+    </div>
+  </div>
 
 <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
