--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
      <!--CSS-->
      <link rel="stylesheet" href="./assets/css/style.css">
+     <!--Fontawesome-->
+     <script src="https://kit.fontawesome.com/28d79610c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Navbar-->
@@ -105,6 +107,17 @@
       </div>
     </div>
   </div>
+
+  <footer class="container-fluid text-center p-5">
+    <div class="logos">
+      <a href="https://github.com/svillaa">
+        <i class="fa-brands fa-github fa-2xl"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/sebastianvillaayala/https://www.linkedin.com/in/sebastianvillaayala/">
+        <i class="fa-brands fa-linkedin fa-2xl"></i>
+      </a>
+    </div>
+  </footer>
 
 <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
