--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <a href="https://github.com/svillaa">
         <i class="fa-brands fa-github fa-2xl"></i>
       </a>
-      <a href="https://www.linkedin.com/in/sebastianvillaayala/https://www.linkedin.com/in/sebastianvillaayala/">
+      <a href="https://www.linkedin.com/in/sebastianvillaayala/">
         <i class="fa-brands fa-linkedin fa-2xl"></i>
       </a>
     </div>
